--- a/tinyMCE_editor.html
+++ b/tinyMCE_editor.html
@@ -7,11 +7,13 @@
 	    selector: "textarea#eml1",
 	    mode : "textareas",
 	    theme : "advanced",
-		language : 'ru',
+		language : 'en',
 	    plugins : "safari,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,unrlnStr",
 	    entity_encoding : "raw",
+		content_style: "ol, ul, p {font-size: 16px; font-family: times new roman,times,serif; line-height:1.15; margin:0; white-space:pre-wrap;} body {margin:0; padding:8px;} img {border:none;}",
 
-	    // Theme options
+		theme_advanced_font_sizes: "10px,12px,13px,14px,16px,18px,20px",
+		// Theme options
 	    theme_advanced_buttons1 : "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,styleselect,formatselect,fontselect,fontsizeselect",
 	    theme_advanced_buttons2 : "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor",
 	    theme_advanced_buttons3 : "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,media,advhr,|,print,|,ltr,rtl,|,fullscreen,|,unrlnStr",
