--- a/tinyMCE_editor.html
+++ b/tinyMCE_editor.html
@@ -8,7 +8,7 @@
 	    mode : "textareas",
 	    theme : "advanced",
 		language : 'ru',
-	    plugins : "safari,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,unrlnStr",
+	    plugins : "pagebreak,style,layer,table,save,advimage,advlink,inlinepopups,,preview,searchreplace,print,contextmenu,paste,fullscreen,noneditable,visualchars,unrlnStr",
 	    entity_encoding : "raw",
 		content_css : "tinymce/content.css",
 		style_formats : [
@@ -18,21 +18,16 @@
 						{title : 'С границей', selector : 'table', classes : 'table_border td_border'},
 						{title : 'Без границы', selector : 'table', classes : 'table_unborder'}
 		            ],
-		theme_advanced_font_sizes: "10px,12px,13px,14px,16px,18px,20px",
+		theme_advanced_font_sizes: "10px,12px,13px,14px,16px,18px,20px,24px",
 		// Theme options
-	    theme_advanced_buttons1 : "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,styleselect,formatselect,fontselect,fontsizeselect",
-	    theme_advanced_buttons2 : "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor",
-	    theme_advanced_buttons3 : "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,media,advhr,|,print,|,ltr,rtl,|,fullscreen,|,unrlnStr",
-	    theme_advanced_buttons4 : "insertlayer,moveforward,movebackward,absolute,|,styleprops,|,cite,abbr,acronym,del,ins,attribs,|,visualchars,nonbreaking,pagebreak",
+	    theme_advanced_buttons1 : "undo,redo,|,cut,copy,paste,pastetext,pasteword,|,link,unlink,image,cleanup,|,bold,italic,underline,strikethrough,|,sub,sup,|,charmap,|,styleselect,formatselect,fontselect,fontsizeselect,|,forecolor,backcolor,|,styleprops,removeformat,pagebreak",
+	    theme_advanced_buttons2 : "search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,justifyleft,justifycenter,justifyright,justifyfull,|,tablecontrols,|,insertlayer,moveforward,movebackward,absolute,|,visualchars,hr,visualaid,|,print,|,fullscreen,|,unrlnStr,|,help,code,preview",
+	    theme_advanced_buttons3 : "",
+
 	    theme_advanced_toolbar_location : "top",
 	    theme_advanced_toolbar_align : "left",
 	    theme_advanced_statusbar_location : "bottom",
 	    theme_advanced_resizing : true,
-
-	    // Drop lists for link/image/media/template dialogs
-	    external_link_list_url : "lists/link_list.js",
-	    external_image_list_url : "lists/image_list.js",
-	    media_external_list_url : "lists/media_list.js",
 
 		oninit: function() {
 				console.log('oninit');
