--- a/tinyMCE_editor.html
+++ b/tinyMCE_editor.html
@@ -21,7 +21,7 @@
 		theme_advanced_font_sizes: "10px,12px,13px,14px,16px,18px,20px,24px",
 		// Theme options
 	    theme_advanced_buttons1 : "undo,redo,|,cut,copy,paste,pastetext,pasteword,|,link,unlink,image,cleanup,|,bold,italic,underline,strikethrough,|,sub,sup,|,charmap,|,styleselect,formatselect,fontselect,fontsizeselect,|,forecolor,backcolor,|,styleprops,removeformat,pagebreak",
-	    theme_advanced_buttons2 : "search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,justifyleft,justifycenter,justifyright,justifyfull,|,tablecontrols,|,insertlayer,moveforward,movebackward,absolute,|,visualchars,hr,visualaid,|,print,|,fullscreen,|,unrlnStr,|,help,code,preview",
+	    theme_advanced_buttons2 : "search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,justifyleft,justifycenter,justifyright,justifyfull,|,tablecontrols,|,insertlayer,moveforward,movebackward,absolute,|,visualchars,hr,visualaid,|,fullscreen,|,unrlnStr,|,help,code,preview,|,print",
 	    theme_advanced_buttons3 : "",
 
 	    theme_advanced_toolbar_location : "top",
