--- a/tinyMCE_editor.html
+++ b/tinyMCE_editor.html
@@ -10,6 +10,7 @@
 		language : 'ru',
 	    plugins : "pagebreak,style,layer,table,save,advimage,advlink,inlinepopups,,preview,searchreplace,print,contextmenu,paste,fullscreen,noneditable,visualchars,unrlnStr",
 	    entity_encoding : "raw",
+		visual: false,
 		content_css : "tinymce/content.css",
 		style_formats : [
 						{title : 'Стандарт', inline : 'span', classes : 'standart alignjust'},
@@ -22,7 +23,6 @@
 		// Theme options
 	    theme_advanced_buttons1 : "undo,redo,|,cut,copy,paste,pastetext,pasteword,|,link,unlink,image,cleanup,|,bold,italic,underline,strikethrough,|,sub,sup,|,charmap,|,styleselect,formatselect,fontselect,fontsizeselect,|,forecolor,backcolor,|,styleprops,removeformat,pagebreak",
 	    theme_advanced_buttons2 : "search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,justifyleft,justifycenter,justifyright,justifyfull,|,tablecontrols,|,insertlayer,moveforward,movebackward,absolute,|,visualchars,hr,visualaid,|,fullscreen,|,unrlnStr,|,help,code,preview,|,print",
-	    theme_advanced_buttons3 : "",
 
 	    theme_advanced_toolbar_location : "top",
 	    theme_advanced_toolbar_align : "left",
