--- a/tinyMCE_editor.html
+++ b/tinyMCE_editor.html
@@ -10,6 +10,7 @@
 		language : 'ru',
 	    plugins : "pagebreak,style,layer,table,save,advimage,advlink,inlinepopups,,preview,searchreplace,print,contextmenu,paste,fullscreen,noneditable,visualchars,unrlnStr",
 	    entity_encoding : "raw",
+		// По умолчанию выключить отображение невидимых границ таблицы
 		visual: false,
 		content_css : "tinymce/content.css",
 		style_formats : [
@@ -33,6 +34,20 @@
 				console.log('oninit');
                 //tinyMCE.get('elm1').execCommand('mceFullScreen');
 			},
+	    setup : function(ed) {
+			// Выполнить перед выполнением команды
+	    	ed.onBeforeExecCommand.add(function(ed, cmd, ui, val) {
+				// Если команда "Печать"
+				if (cmd === "mcePrint") {
+					// Если кнопка visualaid нажата
+					if (ed.hasVisual) {
+						// Переключить состояние кнопки VisualAid
+						tinyMCE.get('elm1').execCommand('mceToggleVisualAid');
+				   		console.debug('Command is to be executed: ' + cmd);
+			   		}
+				}
+	       	});
+	   		},
 		});
 	</script>
 <!-- /TinyMCE -->
