--- a/tinyMCE_editor.html
+++ b/tinyMCE_editor.html
@@ -22,7 +22,6 @@
 		// Theme options
 	    theme_advanced_buttons1 : "undo,redo,|,cut,copy,paste,pastetext,pasteword,|,link,unlink,image,cleanup,|,bold,italic,underline,strikethrough,|,sub,sup,|,charmap,|,styleselect,formatselect,fontselect,fontsizeselect,|,forecolor,backcolor,|,styleprops,removeformat,pagebreak",
 	    theme_advanced_buttons2 : "search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,justifyleft,justifycenter,justifyright,justifyfull,|,tablecontrols,|,insertlayer,moveforward,movebackward,absolute,|,visualchars,hr,visualaid,|,fullscreen,|,unrlnStr,|,help,code,preview,|,print",
-	    theme_advanced_buttons3 : "",
 
 	    theme_advanced_toolbar_location : "top",
 	    theme_advanced_toolbar_align : "left",
@@ -31,7 +30,8 @@
 
 		oninit: function() {
 				console.log('oninit');
-                //tinyMCE.get('elm1').execCommand('mceFullScreen');
+                tinyMCE.get('elm1').execCommand('mceFullScreen');
+                tinyMCE.get('elm1').execCommand('mceToggleVisualAid');
 			},
 		});
 	</script>
