--- a/tinyMCE_editor.html
+++ b/tinyMCE_editor.html
@@ -23,7 +23,7 @@
 		// Theme options
 	    theme_advanced_buttons1 : "undo,redo,|,cut,copy,paste,pastetext,pasteword,|,link,unlink,image,cleanup,|,bold,italic,underline,strikethrough,|,sub,sup,|,charmap,|,styleselect,formatselect,fontselect,fontsizeselect,|,forecolor,backcolor,|,styleprops,removeformat,pagebreak",
 	    theme_advanced_buttons2 : "search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,justifyleft,justifycenter,justifyright,justifyfull,|,tablecontrols,|,insertlayer,moveforward,movebackward,absolute,|,visualchars,hr,visualaid,|,fullscreen,|,unrlnStr,|,help,code,preview,|,print",
-
+		pagebreak_separator:"–¿«–€¬ —“–¿Õ»÷€",
 	    theme_advanced_toolbar_location : "top",
 	    theme_advanced_toolbar_align : "left",
 	    theme_advanced_statusbar_location : "bottom",
